# cargo-duplicates

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yaml
src/: main.rs
